--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist --cname atelierrosso.ca"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
