--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist --cname atelierrosso.ca"
+    "deploy": "gh-pages -d dist --cname atelierrosso.ca",
+    "sass": "sass --no-source-map --style=compressed --watch src/scss:src/css"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
