--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-swipeable": "^7.0.1",
     "sass": "^1.77.8"
   },
   "devDependencies": {
