--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "sass": "sass --no-source-map --style=compressed --watch src/scss:src/css"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
