--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.5.3",
     "react-swipeable": "^7.0.1",
     "sass": "^1.77.8"
   },
