--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@neondatabase/serverless": "^1.0.0",
+    "@stripe/stripe-js": "^7.3.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
