--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
+    "micro": "^10.0.1",
+    "nodemailer": "^7.0.3",
     "pg": "^8.15.6",
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
@@ -31,7 +33,7 @@
     "react-router-dom": "^7.5.3",
     "react-swipeable": "^7.0.1",
     "sass": "^1.77.8",
-    "stripe": "^18.1.0"
+    "stripe": "^18.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
