--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.5.3",
     "react-swipeable": "^7.0.1",
+    "resend": "^4.6.0",
     "sass": "^1.77.8",
     "stripe": "^18.1.1"
   },
